// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[strategy: absolute] [placement: \${placement}] computes offsets: x and y 1`] = `
Object {
  "x": 170,
  "y": 10,
}
`;

exports[`[strategy: absolute] [placement: \${placement}] computes offsets: x and y 2`] = `
Object {
  "x": 170,
  "y": 310,
}
`;

exports[`[strategy: absolute] [placement: \${placement}] computes offsets: x and y 3`] = `
Object {
  "x": 320,
  "y": 160,
}
`;

exports[`[strategy: absolute] [placement: \${placement}] computes offsets: x and y 4`] = `
Object {
  "x": 20,
  "y": 160,
}
`;
